--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                 <div class="banner-text">
                                     <h1 class="h1-title">
                                         Welcome to our
-                                        <span>India</span>
+                                        <span>Food Voyager</span>
                                         restaurant.
                                     </h1>
                                     <p>This is Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam eius
